--- a/Styles/index.html
+++ b/Styles/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="page-header">
-    <div class="header-top">
+    <div class="page-header">
+    <div class="wrapper">
+        <div class="header-top">
         <div class="header-logo">
             <img src="img/logo.png" alt="The Great Keksby" width="205" height="55">
         </div>
@@ -18,8 +19,9 @@
         </ul>
         <a class="btn" href="#">Заказать</a>
     </div>
-    <div class="promo">
+        <div class="promo">
         <a href="#">Аксессуары для котов<br> Коллекция FW15</a>
+    </div>
     </div>
 </div>
 
