--- a/Styles/index.html
+++ b/Styles/index.html
@@ -45,19 +45,20 @@
 
 
 <div class="cat-reference">
-    <h2>Немного теории</h2>
-    <a class="btn" href="#" title="Открыть справочник">Справочник</a>
-    <dl>
+    <div class="wrapper">
+        <h2 class="section-title">Немного теории</h2>
+        <a class="btn" href="#" title="Открыть справочник">Справочник</a>
+        <dl>
         <dt>
-            <h3>Окрас кошек и котов</h3>
+            <h3 class="reference-title">Окрас кошек и котов</h3>
             <i>источник: <a target="_blank" href="https://ru.wikipedia.org">wikipedia</a></i>
         </dt>
         <dd>
             <img src="img/article-1.jpg" alt="Окрас кошек и котов" width="100" height="100">
-            <p>Окрас шерсти, кожи и глаз кошки обусловлен присутствием в них пигмента меланина. Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и количеству, что и вызывает различия в окрасе.</p>
+            <p> Окрас шерсти, кожи и глаз кошки обусловлен присутствием в них пигмента меланина. Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и количеству, что и вызывает различия в окрасе.</p>
         </dd>
         <dt>
-            <h3>Кошкин дом</h3>
+            <h3 class="reference-title">Кошкин дом</h3>
             <i>источник: <a target="_blank" href="http://kotmur.spb.ru">kotmur.spb.ru</a></i>
         </dt>
         <dd>
@@ -65,6 +66,7 @@
             <p>Нужен ли кошке Кошкин дом? Свой отдельный, обособленный от пространства городской квартиры Кошкин дом? Да, нужен! Нужен особый Кошкин дом, обустроенный по ее вкусу с лесенкой, с когтеточкой, с замкнутым, своим, отдельным уголком в ее, кошкином, доме.</p>
         </dd>
     </dl>
+    </div>
 </div>
 
 
