--- a/Styles/index.html
+++ b/Styles/index.html
@@ -71,7 +71,8 @@
 
 
 <div class="reviews">
-    <h2>Довольные коты</h2>
+    <div class="wrapper">
+    <h2 class="section-title">Довольные коты</h2>
     <a class="btn" href="#" title="Посмотреть все отзывы">Все отзывы</a>
     <div class="reviews-list">
         <blockquote class="review-item">
@@ -82,6 +83,7 @@
             <p>Я просто не могу без шоппинга и теперь не нужно тащить хозяйку в магазин, заказываю все аксессуары на сайте у Кекса он-лайн!</p>
             <cite>Мурка, г. Санкт-Петербург</cite>
         </blockquote>
+    </div>
     </div>
 </div>
 
