--- a/Styles/index.html
+++ b/Styles/index.html
@@ -19,8 +19,9 @@
         </ul>
         <a class="btn" href="#">Заказать</a>
     </div>
+
         <div class="promo">
-        <a href="#">Аксессуары для котов<br> Коллекция FW15</a>
+        <a href="#">Аксессуары для котов<br>     Коллекция FW15</a>
     </div>
     </div>
 </div>
@@ -89,29 +90,28 @@
 
 
 <div class="popular-and-price">
-    <h2>Популярные товары</h2>
-    <a class="btn" href="#" title="Посмотреть все товары">Каталог</a>
-    <div class="popular-items">
-        <div class="catalog-item">
-            <img src="img/glasses-1.jpg" alt="очки «Классика жанра»" width="306" height="206">
-            <h3>Очки «Классика жанра»</h3>
-            <b>300 р.</b>
-            <a class="btn" href="#">Описание</a>
-            <a class="btn" href="#">Купить</a>
-        </div>
-        <div class="catalog-item">
-            <img src="img/glasses-2.jpg" alt="очки «Жалюзи»" width="306" height="206">
-            <h3>Очки «Жалюзи»</h3>
-            <b>400 р.</b>
-            <a class="btn" href="#">Описание</a>
-            <a class="btn" href="#">Купить</a>
-        </div>
-        <div class="catalog-item">
-            <img src="img/glasses-3.jpg" alt="очки «Базилис»" width="306" height="206">
-            <h3>Очки «Базилис»</h3>
-            <b>500 р.</b>
-            <a class="btn" href="#">Описание</a>
-            <a class="btn" href="#">Купить</a>
+    <div class="wrapper">
+        <h2 class="section-title">Популярные товары</h2>
+        <a class="btn" href="#" title="Посмотреть все товары">Каталог</a>
+        <div class="popular-items">
+            <div class="catalog-item">
+                <img src="img/glasses-1.jpg" alt="очки «Классика жанра»" width="306" height="206">
+                <h3>Очки «Классика жанра»</h3>
+                <b>300 р.</b>
+                <a class="btn" href="#">Подробнее</a>
+            </div>
+            <div class="catalog-item">
+                <img src="img/glasses-2.jpg" alt="очки «Жалюзи»" width="306" height="206">
+                <h3>Очки «Жалюзи»</h3>
+                <b>400 р.</b>
+                <a class="btn" href="#">Подробнее</a>
+            </div>
+            <div class="catalog-item">
+                <img src="img/glasses-3.jpg" alt="очки «Базилис»" width="306" height="206">
+                <h3>Очки «Базилис»</h3>
+                <b>500 р.</b>
+                <a class="btn" href="#">Подробнее</a>
+            </div>
         </div>
     </div>
 </div>
