prise-list block

--- a/Styles/index.html
+++ b/Styles/index.html
@@ -113,6 +113,39 @@
                 <a class="btn" href="#">Подробнее</a>
             </div>
         </div>
+        <h2 class="section-title">Прайс-лист на услуги</h2>
+        <table class="price-list">
+            <tr>
+                <th class="price-number">№</th>
+                <th>Название услуги</th>
+                <th>Кто оказывает</th>
+                <th>Сколько стоит</th>
+            </tr>
+            <tr>
+                <td class="price-number">1.</td>
+                <td class="price-name">Стрижка</td>
+                <td class="price-master">Грумер</td>
+                <td class="price-cost">500 руб.</td>
+            </tr>
+            <tr>
+                <td class="price-number">2.</td>
+                <td class="price-name">Заточка когтей</td>
+                <td class="price-master">Грумер</td>
+                <td class="price-cost">300 руб.</td>
+            </tr>
+            <tr>
+                <td class="price-number">3.</td>
+                <td class="price-name">Накрутка усов</td>
+                <td class="price-master">Грумер</td>
+                <td class="price-cost">100 руб.</td>
+            </tr>
+            <tr>
+                <td class="price-number">4.</td>
+                <td class="price-name">Подбор аксессуаров</td>
+                <td class="price-master">Стилист</td>
+                <td class="price-cost">1550 руб.</td>
+            </tr>
+        </table>
     </div>
 </div>
 
