--- a/Styles/index.html
+++ b/Styles/index.html
@@ -149,6 +149,47 @@
     </div>
 </div>
 
+<div class="feedback">
+    <div class="wrapper">
+        <h2 class="section-title">Остались вопросы?</h2>
+        <p>Свяжитесь с нами и мы развеем оставшиеся у вас сомнения!</p>
+        <form class="feedback-form" action="#" method="post">
+            <div class="feedback-form-group">
+                <label for="fullname">Представьтесь, пожалуйста:</label>
+                <input type="text" name="fullname" id="fullname" value="Имя 'Прозвище' Фамилия">
+            </div>
+            <div class="clearfix">
+                <div class="feedback-form-group feedback-form-group-left-part">
+                    <label for="phone">Контактный телефон:</label>
+                    <input type="text" name="phone" id="phone" value="8-(XXX)-XXX-XX-XX">
+                </div>
+                <div class="feedback-form-group feedback-form-group-right-part">
+                    <label for="email">Электронная почта:</label>
+                    <input type="text" name="email" id="email" value="E-mail">
+                </div>
+            </div>
+            <div class="checkbox-area">
+                <label class="checkbox">
+                    <input type="checkbox" name="subscription" checked>
+                    Я согласен получать спам и смс на телефон
+                </label>
+            </div>
+            <div class="feedback-form-group">
+                <label for="topic">Тема обращения:</label>
+                <select name="topic" id="topic">
+                    <option value="1">Условия доставки</option>
+                    <option value="2">Возврат товара</option>
+                    <option value="3">Жалоба в Роспотребнадзор</option>
+                </select>
+            </div>
+            <div class="feedback-form-group">
+                <label for="message">Текст обращения:</label>
+                <textarea name="message" id="message"> Введите текст вашего сообщения</textarea>
+            </div>
+            <input type="submit" class="btn" value="Отправить">
+        </form>
+    </div>
+</div>
 
 <div class="page-footer">
     <div class="footer-top">
