--- a/Styles/index.html
+++ b/Styles/index.html
@@ -156,16 +156,16 @@
         <form class="feedback-form" action="#" method="post">
             <div class="feedback-form-group">
                 <label for="fullname">Представьтесь, пожалуйста:</label>
-                <input type="text" name="fullname" id="fullname" value="Имя 'Прозвище' Фамилия">
+                <input type="text" name="fullname" id="fullname" placeholder="Имя 'Прозвище' Фамилия">
             </div>
             <div class="clearfix">
                 <div class="feedback-form-group feedback-form-group-left-part">
                     <label for="phone">Контактный телефон:</label>
-                    <input type="text" name="phone" id="phone" value="8-(XXX)-XXX-XX-XX">
+                    <input type="text" name="phone" id="phone" placeholder="8-(XXX)-XXX-XX-XX">
                 </div>
                 <div class="feedback-form-group feedback-form-group-right-part">
                     <label for="email">Электронная почта:</label>
-                    <input type="text" name="email" id="email" value="E-mail">
+                    <input type="text" name="email" id="email" placeholder="E-mail">
                 </div>
             </div>
             <div class="checkbox-area">
@@ -184,7 +184,7 @@
             </div>
             <div class="feedback-form-group">
                 <label for="message">Текст обращения:</label>
-                <textarea name="message" id="message"> Введите текст вашего сообщения</textarea>
+                <textarea name="message" id="message" placeholder=" Введите текст вашего сообщения"></textarea>
             </div>
             <input type="submit" class="btn" value="Отправить">
         </form>
@@ -192,47 +192,49 @@
 </div>
 
 <div class="page-footer">
-    <div class="footer-top">
-        <div class="footer-logo">
-            <img src="img/logo.png" alt="The Great Keksby" width="205" height="55">
-        </div>
-        <a class="btn" href="#">Заказать</a>
-    </div>
-
-    <div class="footer-middle">
-        <div class="footer-menu">
-            <h3>Магазин</h3>
-            <ul>
-                <li><a href="#">Домики</a></li>
-                <li><a href="#">Одежда</a></li>
-                <li><a href="#">Очки</a></li>
-            </ul>
-        </div>
-        <div class="footer-menu">
-            <h3>Отзывы</h3>
-            <ul>
-                <li><a href="#">Показать</a></li>
-                <li><a href="#">Оставить</a></li>
-            </ul>
-        </div>
-        <div class="footer-menu">
-            <h3>Прайс-лист</h3>
-            <ul>
-                <li><a href="#">Скачать прайс</a></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="footer-bottom">
-        <div class="footer-social">
-            <b>Давайте дружить!</b>
-            <a class="social-btn" href="https://vk.com/htmlacademy">Вконтакте</a>
-            <a class="social-btn" href="https://facebook.com/htmlacademy">Фейсбук</a>
-            <a class="social-btn" href="https://instagram.com/htmlacademy">Инстаграм</a>
+    <div class="wrapper">
+        <div class="footer-top">
+            <div class="footer-logo">
+                <img src="img/logo.png" alt="The Great Keksby" width="205" height="55">
+            </div>
+            <a class="btn" href="#">Заказать</a>
         </div>
 
-        <div class="footer-copyright">
-            С <span class="heart">любовью</span> для <a href="https://htmlacademy.ru">HTML Academy</a>
+        <div class="footer-middle">
+            <div class="footer-menu">
+                <h3>Магазин</h3>
+                <ul>
+                    <li><a href="#">Домики</a></li>
+                    <li><a href="#">Одежда</a></li>
+                    <li><a href="#">Очки</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu">
+                <h3>Отзывы</h3>
+                <ul>
+                    <li><a href="#">Показать</a></li>
+                    <li><a href="#">Оставить</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu">
+                <h3>Прайс-лист</h3>
+                <ul>
+                    <li><a href="#">Скачать прайс</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="footer-social">
+                <b>Давайте дружить!</b>
+                <a class="social-btn vk" href="https://vk.com/htmlacademy">Вконтакте</a>
+                <a class="social-btn fb" href="https://facebook.com/htmlacademy">Фейсбук</a>
+                <a class="social-btn in" href="https://instagram.com/htmlacademy">Инстаграм</a>
+            </div>
+
+            <div class="footer-copyright">
+                С <span class="heart">любовью</span> для <a href="https://htmlacademy.ru">HTML Academy</a>
+            </div>
         </div>
     </div>
 </div>
