--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="page-header">
-    <div class="header-top">
+    <div class="page-header">
+    <div class="wrapper">
+        <div class="header-top">
         <div class="header-logo">
             <img src="img/logo.png" alt="The Great Keksby" width="205" height="55">
         </div>
@@ -18,8 +19,10 @@
         </ul>
         <a class="btn" href="#">Заказать</a>
     </div>
-    <div class="promo">
-        <a href="#">Аксессуары для котов<br> Коллекция FW15</a>
+
+        <div class="promo">
+        <a href="#">Аксессуары для котов<br>     Коллекция FW15</a>
+    </div>
     </div>
 </div>
 
@@ -27,15 +30,15 @@
 <div class="features">
     <ul>
         <li class="feature-item">
-            <h2>Выбор</h2>
+            <h2 class="feature-title">Выбор</h2>
             <p>Ваш питомец оценит широту нашего ассортимента аксессуаров.</p>
         </li>
         <li class="feature-item">
-            <h2>Качество</h2>
+            <h2 class="feature-title">Качество</h2>
             <p>Наши товары не сломаются на второй день. Только на третий.</p>
         </li>
         <li class="feature-item">
-            <h2>Безопасность</h2>
+            <h2 class="feature-title">Безопасность</h2>
             <p>Все изготовлено из натуральных материалов, безопасных для котов.</p>
         </li>
     </ul>
@@ -43,19 +46,20 @@
 
 
 <div class="cat-reference">
-    <h2>Немного теории</h2>
-    <a class="btn" href="#" title="Открыть справочник">Справочник</a>
-    <dl>
+    <div class="wrapper">
+        <h2 class="section-title">Немного теории</h2>
+        <a class="btn" href="#" title="Открыть справочник">Справочник</a>
+        <dl>
         <dt>
-            <h3>Окрас кошек и котов</h3>
+            <h3 class="reference-title">Окрас кошек и котов</h3>
             <i>источник: <a target="_blank" href="https://ru.wikipedia.org">wikipedia</a></i>
         </dt>
         <dd>
             <img src="img/article-1.jpg" alt="Окрас кошек и котов" width="100" height="100">
-            <p>Окрас шерсти, кожи и глаз кошки обусловлен присутствием в них пигмента меланина. Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и количеству, что и вызывает различия в окрасе.</p>
+            <p> Окрас шерсти, кожи и глаз кошки обусловлен присутствием в них пигмента меланина. Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и количеству, что и вызывает различия в окрасе.</p>
         </dd>
         <dt>
-            <h3>Кошкин дом</h3>
+            <h3 class="reference-title">Кошкин дом</h3>
             <i>источник: <a target="_blank" href="http://kotmur.spb.ru">kotmur.spb.ru</a></i>
         </dt>
         <dd>
@@ -63,11 +67,13 @@
             <p>Нужен ли кошке Кошкин дом? Свой отдельный, обособленный от пространства городской квартиры Кошкин дом? Да, нужен! Нужен особый Кошкин дом, обустроенный по ее вкусу с лесенкой, с когтеточкой, с замкнутым, своим, отдельным уголком в ее, кошкином, доме.</p>
         </dd>
     </dl>
+    </div>
 </div>
 
 
 <div class="reviews">
-    <h2>Довольные коты</h2>
+    <div class="wrapper">
+    <h2 class="section-title">Довольные коты</h2>
     <a class="btn" href="#" title="Посмотреть все отзывы">Все отзывы</a>
     <div class="reviews-list">
         <blockquote class="review-item">
@@ -79,80 +85,156 @@
             <cite>Мурка, г. Санкт-Петербург</cite>
         </blockquote>
     </div>
+    </div>
 </div>
 
 
 <div class="popular-and-price">
-    <h2>Популярные товары</h2>
-    <a class="btn" href="#" title="Посмотреть все товары">Каталог</a>
-    <div class="popular-items">
-        <div class="catalog-item">
-            <img src="img/glasses-1.jpg" alt="очки «Классика жанра»" width="306" height="206">
-            <h3>Очки «Классика жанра»</h3>
-            <b>300 р.</b>
-            <a class="btn" href="#">Описание</a>
-            <a class="btn" href="#">Купить</a>
+    <div class="wrapper">
+        <h2 class="section-title">Популярные товары</h2>
+        <a class="btn" href="#" title="Посмотреть все товары">Каталог</a>
+        <div class="popular-items">
+            <div class="catalog-item">
+                <img src="img/glasses-1.jpg" alt="очки «Классика жанра»" width="306" height="206">
+                <h3>Очки «Классика жанра»</h3>
+                <b>300 р.</b>
+                <a class="btn" href="#">Подробнее</a>
+            </div>
+            <div class="catalog-item">
+                <img src="img/glasses-2.jpg" alt="очки «Жалюзи»" width="306" height="206">
+                <h3>Очки «Жалюзи»</h3>
+                <b>400 р.</b>
+                <a class="btn" href="#">Подробнее</a>
+            </div>
+            <div class="catalog-item">
+                <img src="img/glasses-3.jpg" alt="очки «Базилис»" width="306" height="206">
+                <h3>Очки «Базилис»</h3>
+                <b>500 р.</b>
+                <a class="btn" href="#">Подробнее</a>
+            </div>
         </div>
-        <div class="catalog-item">
-            <img src="img/glasses-2.jpg" alt="очки «Жалюзи»" width="306" height="206">
-            <h3>Очки «Жалюзи»</h3>
-            <b>400 р.</b>
-            <a class="btn" href="#">Описание</a>
-            <a class="btn" href="#">Купить</a>
-        </div>
-        <div class="catalog-item">
-            <img src="img/glasses-3.jpg" alt="очки «Базилис»" width="306" height="206">
-            <h3>Очки «Базилис»</h3>
-            <b>500 р.</b>
-            <a class="btn" href="#">Описание</a>
-            <a class="btn" href="#">Купить</a>
-        </div>
+        <h2 class="section-title">Прайс-лист на услуги</h2>
+        <table class="price-list">
+            <tr>
+                <th class="price-number">№</th>
+                <th>Название услуги</th>
+                <th>Кто оказывает</th>
+                <th>Сколько стоит</th>
+            </tr>
+            <tr>
+                <td class="price-number">1.</td>
+                <td class="price-name">Стрижка</td>
+                <td class="price-master">Грумер</td>
+                <td class="price-cost">500 руб.</td>
+            </tr>
+            <tr>
+                <td class="price-number">2.</td>
+                <td class="price-name">Заточка когтей</td>
+                <td class="price-master">Грумер</td>
+                <td class="price-cost">300 руб.</td>
+            </tr>
+            <tr>
+                <td class="price-number">3.</td>
+                <td class="price-name">Накрутка усов</td>
+                <td class="price-master">Грумер</td>
+                <td class="price-cost">100 руб.</td>
+            </tr>
+            <tr>
+                <td class="price-number">4.</td>
+                <td class="price-name">Подбор аксессуаров</td>
+                <td class="price-master">Стилист</td>
+                <td class="price-cost">1550 руб.</td>
+            </tr>
+        </table>
     </div>
 </div>
 
+<div class="feedback">
+    <div class="wrapper">
+        <h2 class="section-title">Остались вопросы?</h2>
+        <p>Свяжитесь с нами и мы развеем оставшиеся у вас сомнения!</p>
+        <form class="feedback-form" action="#" method="post">
+            <div class="feedback-form-group">
+                <label for="fullname">Представьтесь, пожалуйста:</label>
+                <input type="text" name="fullname" id="fullname" placeholder="Имя 'Прозвище' Фамилия">
+            </div>
+            <div class="clearfix">
+                <div class="feedback-form-group feedback-form-group-left-part">
+                    <label for="phone">Контактный телефон:</label>
+                    <input type="text" name="phone" id="phone" placeholder="8-(XXX)-XXX-XX-XX">
+                </div>
+                <div class="feedback-form-group feedback-form-group-right-part">
+                    <label for="email">Электронная почта:</label>
+                    <input type="text" name="email" id="email" placeholder="E-mail">
+                </div>
+            </div>
+            <div class="checkbox-area">
+                <label class="checkbox">
+                    <input type="checkbox" name="subscription" checked>
+                    Я согласен получать спам и смс на телефон
+                </label>
+            </div>
+            <div class="feedback-form-group">
+                <label for="topic">Тема обращения:</label>
+                <select name="topic" id="topic">
+                    <option value="1">Условия доставки</option>
+                    <option value="2">Возврат товара</option>
+                    <option value="3">Жалоба в Роспотребнадзор</option>
+                </select>
+            </div>
+            <div class="feedback-form-group">
+                <label for="message">Текст обращения:</label>
+                <textarea name="message" id="message" placeholder=" Введите текст вашего сообщения"></textarea>
+            </div>
+            <input type="submit" class="btn" value="Отправить">
+        </form>
+    </div>
+</div>
 
 <div class="page-footer">
-    <div class="footer-top">
-        <div class="footer-logo">
-            <img src="img/logo.png" alt="The Great Keksby" width="205" height="55">
-        </div>
-        <a class="btn" href="#">Заказать</a>
-    </div>
-
-    <div class="footer-middle">
-        <div class="footer-menu">
-            <h3>Магазин</h3>
-            <ul>
-                <li><a href="#">Домики</a></li>
-                <li><a href="#">Одежда</a></li>
-                <li><a href="#">Очки</a></li>
-            </ul>
-        </div>
-        <div class="footer-menu">
-            <h3>Отзывы</h3>
-            <ul>
-                <li><a href="#">Показать</a></li>
-                <li><a href="#">Оставить</a></li>
-            </ul>
-        </div>
-        <div class="footer-menu">
-            <h3>Прайс-лист</h3>
-            <ul>
-                <li><a href="#">Скачать прайс</a></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="footer-bottom">
-        <div class="footer-social">
-            <b>Давайте дружить!</b>
-            <a class="social-btn" href="https://vk.com/htmlacademy">Вконтакте</a>
-            <a class="social-btn" href="https://facebook.com/htmlacademy">Фейсбук</a>
-            <a class="social-btn" href="https://instagram.com/htmlacademy">Инстаграм</a>
+    <div class="wrapper">
+        <div class="footer-top">
+            <div class="footer-logo">
+                <img src="img/logo.png" alt="The Great Keksby" width="205" height="55">
+            </div>
+            <a class="btn" href="#">Заказать</a>
         </div>
 
-        <div class="footer-copyright">
-            С <span class="heart">любовью</span> для <a href="https://htmlacademy.ru">HTML Academy</a>
+        <div class="footer-middle">
+            <div class="footer-menu">
+                <h3>Магазин</h3>
+                <ul>
+                    <li><a href="#">Домики</a></li>
+                    <li><a href="#">Одежда</a></li>
+                    <li><a href="#">Очки</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu">
+                <h3>Отзывы</h3>
+                <ul>
+                    <li><a href="#">Показать</a></li>
+                    <li><a href="#">Оставить</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu">
+                <h3>Прайс-лист</h3>
+                <ul>
+                    <li><a href="#">Скачать прайс</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="footer-social">
+                <b>Давайте дружить!</b>
+                <a class="social-btn vk" href="https://vk.com/htmlacademy">Вконтакте</a>
+                <a class="social-btn fb" href="https://facebook.com/htmlacademy">Фейсбук</a>
+                <a class="social-btn in" href="https://instagram.com/htmlacademy">Инстаграм</a>
+            </div>
+
+            <div class="footer-copyright">
+                С <span class="heart">любовью</span> для <a href="https://htmlacademy.ru">HTML Academy</a>
+            </div>
         </div>
     </div>
 </div>
