--- a/EXALLENGE/index.html
+++ b/EXALLENGE/index.html
@@ -7,15 +7,20 @@
     <style></style>
   </head>
   <body>
-    <div class="page-header">
+    <div class="page-header" id="particles-js">
       <div class="page-header-top">
         <div class="container">
           <div class="header-top clearfix">
             <div class="header-logo">
               <a>EXALLENGE</a>
-                <div style="display: inline" class="main__item"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="diamondIconTitle">
+              <!-- <div style="display: inline" class="main__item"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="diamondIconTitle">
                   <title id="diamondIconTitle">Diamond</title>
                   <path d="M12 20L3 11M12 20L21 11M12 20L8 11M12 20L16 11M3 11L7 5M3 11H8M7 5L8 11M7 5H12M17 5L21 11M17 5L16 11M17 5H12M21 11H16M8 11H16M8 11L12 5M16 11L12 5"></path>
+                </svg></div> -->
+                <div style="display: inline"  class="main__item"><svg width="29" height="28" viewBox="0 0 29 28" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="rocketIconTitle">
+                  <title id="rocketIconTitle">Rocket</title>
+                  <path d="M12.7526 9.92418C12.2059 10.2861 11.679 10.7057 11.1924 11.1924C10.4754 11.9093 10.4947 11.9482 9.85359 12.682M12.7526 9.92418C16.178 7.65685 20.3848 7.65685 20.3848 7.65685C20.3848 7.65685 20.3848 11.8636 18.1174 15.289M12.7526 9.92418L18.1174 15.289M18.1174 15.289C17.7555 15.8358 17.3359 16.3626 16.8492 16.8492C16.1323 17.5662 16.0934 17.5469 15.3596 18.188M6.11523 17.429C5.74278 17.9526 5.53552 18.2635 5.53552 18.2635L9.77816 22.5061C9.77816 22.5061 10.0891 22.2988 10.6127 21.9264M6.11523 17.429L2.70709 14.0208L8.36394 11.1924L9.85359 12.682M6.11523 17.429C6.83965 16.4105 8.18898 14.5874 9.85359 12.682M10.6127 21.9264L14.0208 25.3345L16.8492 19.6777L15.3596 18.188M10.6127 21.9264C11.6311 21.202 13.4542 19.8526 15.3596 18.188"></path>
+                  <path d="M5.00003 23C5.35031 21.5825 5.99994 21.0001 6.5 21.5C7.00003 22 6.41751 22.6497 5.00003 23Z"></path>
                 </svg></div>
             </div>
             <ul class="main-nav clearfix">
@@ -37,16 +42,37 @@
       <div class="container">
         <ul class="clearfix">
           <li class="feature-item feature-choice">
-            <h2 class="feature-title">Выбор</h2>
-            <p>Ваш питомец оценит широту нашего ассортимента аксессуаров.</p>
+              <div class="main__item"><svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-labelledby="supportIconTitle">
+                <title id="supportIconTitle">Support</title>
+                <path stroke-linecap="round" d="M11 8L9.42229 7.21115C9.14458 7.07229 8.83835 7 8.52786 7H7.82843C7.29799 7 6.78929 7.21071 6.41421 7.58579L5.58579 8.41421C5.21071 8.78929 5 9.29799 5 9.82843L5 14.9296C5 15.5983 5.3342 16.2228 5.8906 16.5937L9.75746 19.1716C10.4944 19.663 11.4668 19.611 12.1472 19.044L17 15"></path>
+                <path d="M14.4549 12.9142C13.8515 12.1062 12.741 11.8739 11.8643 12.3721L10.009 13.4266C9.41298 13.7653 8.66412 13.6641 8.17937 13.1794V13.1794C7.54605 12.546 7.59324 11.5056 8.2813 10.9323L12.4437 7.46356C12.8032 7.16403 13.2562 7 13.7241 7H14.5279C14.8384 7 15.1446 7.07229 15.4223 7.21115L17.8944 8.44721C18.572 8.786 19 9.47852 19 10.2361L19 12.9796C19 14.9037 16.5489 15.718 15.3976 14.1764L14.4549 12.9142Z"></path>
+                <path d="M1 17V8"></path>
+                <path d="M1 17V8"></path>
+                <path d="M23 17V8"></path>
+              </svg></div>
+            <h2 class="feature-title">Очно</h2>
+            <p>Онлайн-курсы заканчивают 1.5 процента слушателей. Что-то запоминают еще меньше. Поэтому мы решили проводить очно все наши занятия.</p>
           </li>
           <li class="feature-item feature-quality">
-            <h2 class="feature-title">Качество</h2>
-            <p>Наши товары не сломаются на второй день. Только на третий.</p>
+              <div class="main__item"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="diamondIconTitle">
+                <title id="diamondIconTitle">Diamond</title>
+                <path d="M12 20L3 11M12 20L21 11M12 20L8 11M12 20L16 11M3 11L7 5M3 11H8M7 5L8 11M7 5H12M17 5L21 11M17 5L16 11M17 5H12M21 11H16M8 11H16M8 11L12 5M16 11L12 5"></path>
+              </svg></div>
+            <h2 class="feature-title">Качественно</h2>
+            <p>Мы детально проработали все и сами были на вашем месте. Мы уже заранее знаем какие у вас будут трудности и как нам их вместе преодалеть.</p>
           </li>
           <li class="feature-item feature-safety">
-            <h2 class="feature-title">Безопасность</h2>
-            <p>Все изготовлено из натуральных материалов, безопасных для котов.</p>
+              <div class="main__item"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="basketballIconTitle">
+                <title id="basketballIconTitle">Basketball</title>
+                <g stroke-linecap="butt">
+                  <path d="M3.00476 7.71673C6.03818 6.81589 9.99791 7.74841 13.2448 10.4315C16.5425 13.1566 18.2053 16.9442 17.8244 20.1241"></path>
+                  <path d="M10.102 21.7996C9.33937 19.3589 10.0106 15.6137 12.0776 12.0335C14.1385 8.46402 17.0351 6.01413 19.5251 5.44463"></path>
+                  <path d="M11.4419 2C11.2615 3.94419 10.5157 6.2298 9.22541 8.46468C7.29158 11.8142 4.64753 14.1615 2.40135 14.7854"></path>
+                </g>
+                <circle cx="12" cy="12" r="10"></circle>
+              </svg></div>
+            <h2 class="feature-title">Увлекательно</h2>
+            <p>Мы не читаем лекции по 3 часа а потом просим пройти тест в конце. На наших курсах вы будете разробатывать реальные проекты чтобы все понять.</p>
           </li>
         </ul>
       </div>
@@ -124,40 +150,6 @@
             <a href="#" class="btn btn-buy">Купить</a>
           </div>
         </div>
-
-        <h2 class="section-title">Прайс-лист на услуги</h2>
-        <table class="price-list">
-          <tr>
-            <th class="price-number">№</th>
-            <th>Название услуги</th>
-            <th>Кто оказывает</th>
-            <th>Сколько стоит</th>
-          </tr>
-          <tr>
-            <td class="price-number">1.</td>
-            <td class="price-name">Стрижка</td>
-            <td class="price-master">Грумер</td>
-            <td class="price-cost">500 руб.</td>
-          </tr>
-          <tr>
-            <td class="price-number">2.</td>
-            <td class="price-name">Заточка когтей</td>
-            <td class="price-master">Грумер</td>
-            <td class="price-cost">300 руб.</td>
-          </tr>
-          <tr>
-            <td class="price-number">3.</td>
-            <td class="price-name">Накрутка усов</td>
-            <td class="price-master">Грумер</td>
-            <td class="price-cost">100 руб.</td>
-          </tr>
-          <tr>
-            <td class="price-number">4.</td>
-            <td class="price-name">Подбор аксессуаров</td>
-            <td class="price-master">Стилист</td>
-            <td class="price-cost">1500 руб.</td>
-          </tr>
-        </table>
       </div>
     </div>
 
@@ -251,6 +243,141 @@
         </div>
       </div>
     </div>
+    <script src="js/particles.js"></script>  
+    <script>
+      /* ---- particles.js config ---- */
 
+particlesJS("particles-js", {
+  "particles": {
+    "number": {
+      "value": 220,
+      "density": {
+        "enable": true,
+        "value_area": 800
+      }
+    },
+    "color": {
+      "value": "#ffffff"
+    },
+    "shape": {
+      "type": "circle",
+      "stroke": {
+        "width": 0,
+        "color": "#000000"
+      },
+      "polygon": {
+        "nb_sides": 5
+      },
+      "image": {
+        "src": "img/github.svg",
+        "width": 100,
+        "height": 100
+      }
+    },
+    "opacity": {
+      "value": 0.5,
+      "random": false,
+      "anim": {
+        "enable": false,
+        "speed": 1,
+        "opacity_min": 0.1,
+        "sync": false
+      }
+    },
+    "size": {
+      "value": 3,
+      "random": true,
+      "anim": {
+        "enable": false,
+        "speed": 40,
+        "size_min": 0.1,
+        "sync": false
+      }
+    },
+    "line_linked": {
+      "enable": true,
+      "distance": 150,
+      "color": "#ffffff",
+      "opacity": 0.4,
+      "width": 1
+    },
+    "move": {
+      "enable": true,
+      "speed": 2,
+      "direction": "none",
+      "random": false,
+      "straight": false,
+      "out_mode": "out",
+      "bounce": false,
+      "attract": {
+        "enable": false,
+        "rotateX": 600,
+        "rotateY": 1200
+      }
+    }
+  },
+  "interactivity": {
+    "detect_on": "canvas",
+    "events": {
+      "onhover": {
+        "enable": true,
+        "mode": "grab"
+      },
+      "onclick": {
+        "enable": true,
+        "mode": "push"
+      },
+      "resize": true
+    },
+    "modes": {
+      "grab": {
+        "distance": 140,
+        "line_linked": {
+          "opacity": 1
+        }
+      },
+      "bubble": {
+        "distance": 400,
+        "size": 40,
+        "duration": 2,
+        "opacity": 8,
+        "speed": 3
+      },
+      "repulse": {
+        "distance": 200,
+        "duration": 0.4
+      },
+      "push": {
+        "particles_nb": 4
+      },
+      "remove": {
+        "particles_nb": 2
+      }
+    }
+  },
+  "retina_detect": true
+});
+
+
+/* ---- stats.js config ---- */
+
+var count_particles, stats, update;
+stats = new Stats;
+stats.setMode(0);
+stats.domElement.style.position = 'absolute';
+stats.domElement.style.left = '0px';
+stats.domElement.style.top = '0px';
+document.body.appendChild(stats.domElement);
+count_particles = document.querySelector('.js-count-particles');
+update = function() {
+  stats.begin();
+  stats.end();
+  if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+    count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+  }
+  requestAnimationFrame(update);
+};
+requestAnimationFrame(update);
+    </script>
   </body>
 </html>
