--- a/EXALLENGE/index.html
+++ b/EXALLENGE/index.html
@@ -36,8 +36,6 @@
         </div>
       </div>
     </div>
-
-
     <div class="features">
       <div class="container">
         <ul class="clearfix">
@@ -77,37 +75,23 @@
         </ul>
       </div>
     </div>
-
-
-    <div class="cat-reference">
-      <div class="container">
-        <h2 class="section-title">Немного теории</h2>
-        <a class="btn to-full-reference" href="#" title="Открыть справочник">Справочник</a>
-        <dl>
-          <dt>
-            <h3 class="reference-title">Окрас кошек и котов</h3>
-            <i class="reference-source">источник: <a target="_blank" href="https://ru.wikipedia.org">wikipedia</a></i>
-          </dt>
-          <dd>
-            <img src="img/article-1.jpg" alt="Окрас кошек и котов" width="100" height="100">
-            <p>Окрас шерсти, кожи и глаз кошки обусловлен присутствием в них пигмента меланина. Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и количеству, что и вызывает различия в окрасе.</p>
-          </dd>
-          <dt>
-            <h3 class="reference-title">Кошкин дом</h3>
-            <i class="reference-source">источник: <a target="_blank" href="http://kotmur.spb.ru">kotmur.spb.ru</a></i>
-          </dt>
-          <dd>
-            <img src="img/article-2.jpg" alt="Кошкин дом" width="100" height="100">
-            <p>Нужен ли кошке Кошкин дом? Свой отдельный, обособленный от пространства городской квартиры Кошкин дом? Да, нужен! Нужен особый Кошкин дом, обустроенный по ее вкусу с лесенкой, с когтеточкой, с замкнутым, своим, отдельным уголком в ее, кошкином, доме.</p>
-          </dd>
-        </dl>
+    <div class="press-review">
+      <div class="wrapper">
+        <h2 class="section-title">О нас</h2>
+        <blockquote>
+          <p>Вам наверное интересно как мы начали читать лекции и зачем мы это делаем. В этой статье на медиуме мы рассказали о нашей мотивации и о самих курсах.</p>
+          <div>
+            <cite>Блог на Medium</cite>
+            <a class="btn" href="#">Читать</a>	
+          </div>  
+        </blockquote>
       </div>
     </div>
 
 
     <div class="reviews">
       <div class="container">
-        <h2 class="section-title">Довольные коты</h2>
+        <h2 class="section-title">Отзывы</h2>
         <a class="btn to-all-reviews" href="#" title="Посмотреть все отзывы">Все отзывы</a>
         <div class="reviews-list clearfix">
           <blockquote class="review-item">
@@ -200,10 +184,18 @@
     <div class="page-footer">
       <div class="container">
         <div class="footer-top clearfix">
-          <div class="footer-logo">
-            <img src="img/logo.png" alt="The Great Keksby" width="205" height="55">
+          <div class="header-logo">
+            <a>EXALLENGE</a>
+            <!-- <div style="display: inline" class="main__item"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="diamondIconTitle">
+                <title id="diamondIconTitle">Diamond</title>
+                <path d="M12 20L3 11M12 20L21 11M12 20L8 11M12 20L16 11M3 11L7 5M3 11H8M7 5L8 11M7 5H12M17 5L21 11M17 5L16 11M17 5H12M21 11H16M8 11H16M8 11L12 5M16 11L12 5"></path>
+              </svg></div> -->
+              <div style="display: inline"  class="main__item"><svg width="29" height="28" viewBox="0 0 29 28" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="rocketIconTitle">
+                <title id="rocketIconTitle">Rocket</title>
+                <path d="M12.7526 9.92418C12.2059 10.2861 11.679 10.7057 11.1924 11.1924C10.4754 11.9093 10.4947 11.9482 9.85359 12.682M12.7526 9.92418C16.178 7.65685 20.3848 7.65685 20.3848 7.65685C20.3848 7.65685 20.3848 11.8636 18.1174 15.289M12.7526 9.92418L18.1174 15.289M18.1174 15.289C17.7555 15.8358 17.3359 16.3626 16.8492 16.8492C16.1323 17.5662 16.0934 17.5469 15.3596 18.188M6.11523 17.429C5.74278 17.9526 5.53552 18.2635 5.53552 18.2635L9.77816 22.5061C9.77816 22.5061 10.0891 22.2988 10.6127 21.9264M6.11523 17.429L2.70709 14.0208L8.36394 11.1924L9.85359 12.682M6.11523 17.429C6.83965 16.4105 8.18898 14.5874 9.85359 12.682M10.6127 21.9264L14.0208 25.3345L16.8492 19.6777L15.3596 18.188M10.6127 21.9264C11.6311 21.202 13.4542 19.8526 15.3596 18.188"></path>
+                <path d="M5.00003 23C5.35031 21.5825 5.99994 21.0001 6.5 21.5C7.00003 22 6.41751 22.6497 5.00003 23Z"></path>
+              </svg></div>
           </div>
-          <a href="#" class="btn btn-quick-order">Заказать</a>
         </div>
 
         <div class="footer-middle clearfix">
@@ -227,18 +219,6 @@
             <ul>
               <li><a href="#">Скачать прайс</a></li>
             </ul>
-          </div>
-        </div>
-
-        <div class="footer-bottom clearfix">
-          <div class="footer-social">
-            <b>Давайте дружить!</b>
-            <a class="social-btn social-btn-vk" href="https://vk.com/htmlacademy">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="https://facebook.com/htmlacademy">Фейсбук</a>
-            <a class="social-btn social-btn-in" href="https://instagram.com/htmlacademy">Инстаграм</a>
-          </div>
-          <div class="footer-copyright">
-            С <span class="heart">любовью</span> для <a href="https://htmlacademy.ru">HTML Academy</a>
           </div>
         </div>
       </div>
