--- a/EXALLENGE/index.html
+++ b/EXALLENGE/index.html
@@ -95,12 +95,12 @@
         <a class="btn to-all-reviews" href="#" title="Посмотреть все отзывы">Все отзывы</a>
         <div class="reviews-list clearfix">
           <blockquote class="review-item">
-            <p>Спасибо Кексу за давно напрашивающуюся идею! Набрал себе очков на все случаи жизни: для чтения и для вечеринки с котанами B-)</p>
-            <cite class="review-author">Барсик, г. Москва</cite>
+            <p>Большое спасибо ребятам за очный курс по python! Часто засиживались уже после пар чтобы разобрать домашку или задать вопросы по лекции.</p>
+            <cite class="review-author">Глеб, г. Москва</cite>
           </blockquote>
           <blockquote class="review-item">
-            <p>Я просто не могу без шопинга и теперь не нужно тащить хозяйку в магазин, заказываю все аксессуары на сайте у Кекса онлайн!</p>
-            <cite class="review-author">Мурка, г. Санкт-Петербург</cite>
+            <p>Лично я постоянно теряю фокус и начинаю отвлекаться. Но ребята построили общение так, что я все равно все усвоил и понял. Спасибо большое!</p>
+            <cite class="review-author">Олег, г. Москва</cite>
           </blockquote>
         </div>
       </div>
@@ -109,29 +109,26 @@
 
     <div class="popular-and-price">
       <div class="container">
-        <h2 class="section-title">Популярные товары</h2>
-        <a class="btn to-catalog" href="#" title="Посмотреть все товары">Каталог</a>
+        <h2 class="section-title">Популярные курсы</h2>
+        <a class="btn to-catalog" href="#" title="Посмотреть все курсы">Все курсы</a>
         <div class="popular-items clearfix">
           <div class="catalog-item">
-            <img src="img/glasses-1.jpg" alt="очки «Классика жанра»" width="306" height="206">
-            <h3>Очки «Классика жанра»</h3>
-            <b class="catalog-item-price">300 р.</b>
+            <h3>Python для школьников</h3>
+            <p>Изучим основы языка, напишем первые программы. Прорешаем более 70 практических задач которые проверят наши учителя.</p>
             <a href="#" class="btn btn-info">Описание</a>
-            <a href="#" class="btn btn-buy">Купить</a>
+            <a href="#" class="btn btn-buy">Записаться</a>
           </div>
           <div class="catalog-item">
-            <img src="img/glasses-2.jpg" alt="очки «Жалюзи»" width="306" height="206">
-            <h3>Очки «Жалюзи»</h3>
-            <b class="catalog-item-price">400 р.</b>
+            <h3>Python для студентов</h3>
+            <p>Разберем как основы так и продвинутые темы языка. Разработаем выпускной проект в группах с использованием системы контроля версий.</p>
             <a href="#" class="btn btn-info">Описание</a>
-            <a href="#" class="btn btn-buy">Купить</a>
+            <a href="#" class="btn btn-buy">Записаться</a>
           </div>
           <div class="catalog-item">
-            <img src="img/glasses-3.jpg" alt="очки «Базилис»" width="306" height="206">
-            <h3>Очки «Базилис»</h3>
-            <b class="catalog-item-price">500 р.</b>
+            <h3>Фронтенд-разработка для студентов</h3>
+            <p>Рассмотрим как устроен фронтенд в 2019 году и что нужно знать для того чтобы заниматься разработкой. Реализуем проект с использованием HTML, CSS и JS.</p>
             <a href="#" class="btn btn-info">Описание</a>
-            <a href="#" class="btn btn-buy">Купить</a>
+            <a href="#" class="btn btn-buy">Записаться</a>
           </div>
         </div>
       </div>
@@ -140,42 +137,23 @@
 
     <div class="feedback">
       <div class="container">
-        <h2 class="section-title">Остались вопросы?</h2>
-        <p class="feedback-tip">Свяжитесь с нами и мы развеем оставшиеся у вас сомнения!</p>
+        <h2 class="section-title">Есть вопросы?</h2>
         <form class="feedback-form" action="/keksby-mail" method="post">
           <div class="feedback-form-group">
             <label for="fullname">Представьтесь, пожалуйста:</label>
             <input type="text" name="fullname" id="fullname">
           </div>
-          <div class="clearfix">
-            <div class="feedback-form-group feedback-form-group-left-part">
-              <label for="phone">Контактный телефон:</label>
-              <input type="text" name="phone" id="phone">
-            </div>
-            <div class="feedback-form-group feedback-form-group-right-part">
-              <label for="email">Электронная почта:</label>
-              <input type="text" name="email" id="email">
-            </div>
-          </div>
-          <div class="checkbox-area">
-            <label>
-              <input type="checkbox" name="subscription">
-              Я согласен получать спам и смс на телефон
-            </label>
-          </div>
           <div class="feedback-form-group">
-            <label for="topic">Тема обращения:</label>
-            <select name="topic" id="topic">
-              <option value="1">Условия доставки</option>
-              <option value="2">Возврат товара</option>
-              <option value="3">Жалоба в Роспотребнадзор</option>
-            </select>
+            <label for="fullname">Электронная почта:</label>
+            <input type="text" name="email" id="email">
           </div>
           <div class="feedback-form-group">
             <label for="message">Текст обращения:</label>
             <textarea name="message" id="message"></textarea>
           </div>
-          <input type="submit" class="btn" value="Отправить">
+          <div style="text-align:center">
+            <input type="submit" class="btn" value="Отправить">
+          </div>  
         </form>
       </div>
     </div>
