--- a/Final/finishWork/index.html
+++ b/Final/finishWork/index.html
@@ -96,25 +96,19 @@
         <a class="btn to-catalog" href="#" title="Посмотреть все товары">Каталог</a>
         <div class="popular-items clearfix">
           <div class="catalog-item">
-            <img src="img/glasses-1.jpg" alt="очки «Классика жанра»" width="306" height="206">
             <h3>Очки «Классика жанра»</h3>
-            <b class="catalog-item-price">300 р.</b>
             <a href="#" class="btn btn-info">Описание</a>
-            <a href="#" class="btn btn-buy">Купить</a>
+            <a href="#" class="btn btn-buy">Записаться</a>
           </div>
           <div class="catalog-item">
-            <img src="img/glasses-2.jpg" alt="очки «Жалюзи»" width="306" height="206">
             <h3>Очки «Жалюзи»</h3>
-            <b class="catalog-item-price">400 р.</b>
             <a href="#" class="btn btn-info">Описание</a>
-            <a href="#" class="btn btn-buy">Купить</a>
+            <a href="#" class="btn btn-buy">Записаться</a>
           </div>
           <div class="catalog-item">
-            <img src="img/glasses-3.jpg" alt="очки «Базилис»" width="306" height="206">
             <h3>Очки «Базилис»</h3>
-            <b class="catalog-item-price">500 р.</b>
             <a href="#" class="btn btn-info">Описание</a>
-            <a href="#" class="btn btn-buy">Купить</a>
+            <a href="#" class="btn btn-buy">Записаться</a>
           </div>
         </div>
 
