--- a/EXALLENGE/index.html
+++ b/EXALLENGE/index.html
@@ -178,11 +178,11 @@
 
         <div class="footer-middle clearfix">
           <div class="footer-menu">
-            <h3>Магазин</h3>
+            <h3>Курсы</h3>
             <ul>
-              <li><a href="#">Домики</a></li>
-              <li><a href="#">Одежда</a></li>
-              <li><a href="#">Очки</a></li>
+              <li><a href="#">Школьникам</a></li>
+              <li><a href="#">Студентам</a></li>
+              <li><a href="#">Компаниям</a></li>
             </ul>
           </div>
           <div class="footer-menu">
@@ -193,9 +193,10 @@
             </ul>
           </div>
           <div class="footer-menu">
-            <h3>Прайс-лист</h3>
+            <h3>Вакансии</h3>
             <ul>
-              <li><a href="#">Скачать прайс</a></li>
+              <li><a href="#">Лекторы</a></li>
+              <li><a href="#">Наставники</a></li>
             </ul>
           </div>
         </div>
