--- a/EXALLENGE/index.html
+++ b/EXALLENGE/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>EXALLENGE</title>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
